# Chess-Engine

./: .gitignore  CMakeLists.txt  Chess_Logic.h  Game_Board.cpp  Game_Board.h  ImGuiLayer.cpp  ModelLoader.cpp  ModelLoader.h  TextureImage.cpp  VulkanApplication.h  VulkanHelper.cpp  VulkanHelper.h  VulkanTest.sln  VulkanTest.vcxproj  VulkanTest.vcxproj.filters  build.bat  clean.bat  common.cpp  debug.vert  imgui.ini  run.bat
Game_Logic/: board_class.h
Rendering_Helpers/: ImGuiLayer.cpp  ImGuiLayer.h  TextureImage.cpp  TextureImage.h
Vulkan/: VulkanApplication.cpp  VulkanApplication.h  VulkanHelper.h
shaders/: compile.bat  vert.spv
src/: CMakeLists.txt  common.h  main.cpp
src/Game_Logic/: Chess_Bot.cpp  Chess_Logic.cpp  inputHandling.cpp
src/Rendering_Helpers/: ImGuiLayer.cpp  ImGuiLayer.h
src/Vulkan/: VulkanApplication.cpp
